argocd/base-2.9.3/resources/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    goldilocks.fairwinds.com/enabled: "true"
spec: {}
