argocd/base-2.9.3/resources/argocd-server-grpc-ingress.yaml
# Reference:
# https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#option-2-ssl-termination-at-ingress-controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              # Documentation for this field is wrong! It says https but it actually needs to be http.
              name: http
    host: replace_in_overlay
  # TLS section is not needed since the ingress controller has a default (wildcard) cert
  # tls:
  # - hosts:
  #   - grpc-argocd.example.com
  #   secretName: argocd-ingress-grpc
